<resources>
    <string name="app_name">ListViewP1</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="inicial">default</string>
    <string name="add">+</string>
    <string name="remove">-</string>
    <string name="insertar">Añadir</string>
    <string name="insertar_numero">Añadir número</string>
    <string name="cancelar">Cancelar</string>
    <string name="cerrar">Cerrar</string>
    <string name="titulo_insertar">Añadir número</string>
    <string name="titulo_ver">Ver números</string>
    <string name="title_activity_creador">Creador</string>
    <string name="hint_nombre">Nombre...</string>
    <string name="nombre">Nombre</string>
    <string name="hint_telefono">Teléfono...</string>
    <string name="telefono">Teléfono</string>
    <string name="guardar">Guardar</string>
    <string name="editar">Editar</string>
    <string name="eliminar">Eliminar</string>
    <string name="confirmar">Confirmar operación</string>
    <string name="mensaje_borrar">Se procederá a borrar a</string>
    <string name="aceptar">Aceptar</string>
    <string name="title_activity_vista_contacto">VistaContacto</string>
    <string name="ver">Ver</string>
    <string name="ordenar_ascedente">Ordenar A-Z</string>
    <string name="ordenar_descedente">Ordenar Z-A</string>
    <string name="establecer_pricipal">Establecer como principal</string>
    <string name="exito_borrar">Eliminado con éxito</string>
    <string name="exito_guardar">Guardado con éxito</string>
    <string name="auto_sync">Sincronización automática</string>
    <string name="tipo_sync">Sustituir backup al sincronizar</string>
    <string name="sync">Actualizar copia de seguridad</string>
    <string name="opciones">Opciones</string>
    <string name="no_back">No hay ningún back up de contactos</string>
    <string name="crear">Crear</string>
</resources>
